--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.4",
         "filament/filament": "^3.2",
+        "filament/widgets": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
